force-app/main/default/objects/Brick_Pharmacy__c/Brick_Pharmacy__c.object-meta.xml
<CustomObject>
    <label>Brick Pharmacy</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Brick Pharmacy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brick Pharmacies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>