force-app/main/default/objects/Brick_Pharmacy__c/fields/Brick__c.field-meta.xml
<CustomField>
    <fullName>Brick__c</fullName>
    <label>Brick</label>
    <referenceTo>Brick__c</referenceTo>
    <relationshipLabel>Brick Pharmacies</relationshipLabel>
    <relationshipName>Brick_Pharmacies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>