force-app/main/default/objects/Brick_Pharmacy__c/fields/Pharmacy_Account__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pharmacy Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brick Pharmacies</relationshipLabel>
    <relationshipName>Brick_Pharmacies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>