force-app/main/default/objects/Brick_Pharmacy__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Brick and pharmacy composite key. Populated automatically on save.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>